tool/src/dotnet/snapshots/diplomat_tool__dotnet__tests__result_types@RawFfiResultMyStructU8.cs.snap
---
source: tool/src/dotnet/tests.rs
expression: out_texts.get(out).unwrap()
---
// <auto-generated/> by Diplomat

#pragma warning disable 0105
using System;
using System.Runtime.InteropServices;

using Interop.Diplomat;
#pragma warning restore 0105

namespace Interop.Raw;

#nullable enable

[StructLayout(LayoutKind.Sequential)]
public partial struct FfiResultMyStructU8
{
    [StructLayout(LayoutKind.Explicit)]
    private unsafe struct InnerUnion
    {
        [FieldOffset(0)]
        internal MyStruct ok;
        [FieldOffset(0)]
        internal byte err;
    }

    private InnerUnion _inner;

    [MarshalAs(UnmanagedType.U1)]
    public bool isOk;

    public unsafe MyStruct Ok
    {
        get
        {
            return _inner.ok;
        }
    }

    public unsafe byte Err
    {
        get
        {
            return _inner.err;
        }
    }
}
