tool/src/dotnet/snapshots/diplomat_tool__dotnet__tests__setters_getters_properties@RawBar.cs.snap
---
source: tool/src/dotnet/tests.rs
expression: out_texts.get(out).unwrap()
---
// <auto-generated/> by Diplomat

#pragma warning disable 0105
using System;
using System.Runtime.InteropServices;

using SomeOrg.SomeModule;
using We.Also.Need.This;
using OurOrg.OurRustLib.Diplomat;
#pragma warning restore 0105

namespace OurOrg.OurRustLib.Raw;

#nullable enable

[StructLayout(LayoutKind.Sequential)]
public partial struct Bar
{
    private const string NativeLib = "mylib";

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "Bar_get_foo", ExactSpelling = true)]
    public static unsafe extern FfiResultBoxFooVoid GetFoo(Bar* self);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "Bar_set_foo", ExactSpelling = true)]
    public static unsafe extern FfiResultVoidVoid SetFoo(Bar* self, Foo* foo);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "Bar_get_name", ExactSpelling = true)]
    public static unsafe extern FfiResultVoidVoid GetName(Bar* self, DiplomatWrite* out);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "Bar_set_name", ExactSpelling = true)]
    public static unsafe extern FfiResultVoidVoid SetName(Bar* self, byte* newName, nuint newNameSz);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "Bar_destroy", ExactSpelling = true)]
    public static unsafe extern void Destroy(Bar* self);
}
